# Zvhf_Testing_Env

./: .gitignore  .gitmodules  README.md
Benchmarks/: README.md  vicuna_sim_out.S
Benchmarks/FH_Support/16_bit_ops/: conv.cc  conv.h  depthwise_conv.cc  depthwise_conv_common.cc  depthwiseconv_float.h  dequantize.cc  dequantize.h  dequantize_common.cc  fully_connected.cc  fully_connected.h  fully_connected_common.cc  pooling.cc  pooling.h  pooling_common.cc  softmax.cc  softmax.h
Benchmarks/FH_Support/32_bit_ops/: dequantize.h
Benchmarks/FP16/aww_16_bit_ops/: aww_fp16.cpp
Benchmarks/FP16/aww_16_bit_ops/aww_fp16_data/: aww_fp16_input_data.cc  aww_fp16_input_data.h  aww_fp16_model_data.cc  aww_fp16_model_data.h  aww_fp16_model_settings.cc  aww_fp16_model_settings.h  aww_fp16_output_data_ref.cc  aww_fp16_output_data_ref.h
Benchmarks/FP16/toycar/: toycar_fp16.cpp
Benchmarks/FP16/toycar/model_data/: toycar_fp16_input_data.cc  toycar_fp16_model_data.cc  toycar_fp16_model_data.h  toycar_fp16_output_data_ref.cc
Benchmarks/FP16/toycar_16_bit_ops/: toycar_fp16.cpp
Benchmarks/FP16/toycar_16_bit_ops/toycar_fp16_data/: toycar_fp16_input_data.cc  toycar_fp16_input_data.h  toycar_fp16_model_data.h  toycar_fp16_model_settings.cc  toycar_fp16_model_settings.h  toycar_fp16_output_data_ref.cc  toycar_fp16_output_data_ref.h
Benchmarks/FP16/toycar_32_bit_ops/: toycar_fp16.cpp
Benchmarks/FP16/toycar_32_bit_ops/toycar_fp16_data/: toycar_fp16_input_data.cc  toycar_fp16_input_data.h  toycar_fp16_model_data.cc  toycar_fp16_output_data_ref.cc  toycar_fp16_output_data_ref.h
Benchmarks/FP32/aww/: aww_fp32.cpp
Benchmarks/FP32/aww/aww_fp32_data/: aww_fp32_input_data.cc  aww_fp32_input_data.h  aww_fp32_model_data.cc  aww_fp32_model_data.h  aww_fp32_model_settings.cc  aww_fp32_model_settings.h  aww_fp32_output_data_ref.cc  aww_fp32_output_data_ref.h
Benchmarks/FP32/toycar/: toycar_fp32.cpp
Benchmarks/FP32/toycar/toycar_fp32_data/: toycar_fp32_input_data.cc  toycar_fp32_input_data.h  toycar_fp32_model_data.h  toycar_fp32_model_settings.cc  toycar_fp32_model_settings.h  toycar_fp32_output_data_ref.cc  toycar_fp32_output_data_ref.h
Benchmarks/Int8/aww/: aww_int8.cpp
Benchmarks/Int8/aww/aww_int8_data/: aww_int8_input_data.cc  aww_int8_input_data.h  aww_int8_model_data.cc  aww_int8_model_data.h  aww_int8_model_settings.cc  aww_int8_model_settings.h  aww_int8_output_data_ref.cc  aww_int8_output_data_ref.h
Benchmarks/Int8/toycar/: toycar_int8.cpp
Benchmarks/Int8/toycar/toycar_int8_data/: toycar_int8_input_data.cc  toycar_int8_input_data.h  toycar_int8_model_data.cc  toycar_int8_model_data.h  toycar_int8_model_settings.cc  toycar_int8_model_settings.h  toycar_int8_output_data_ref.cc  toycar_int8_output_data_ref.h
Benchmarks/models/aww/: create_flatbuffers.py
Benchmarks/models/aww/models/: aww.h5  aww_fp16.tflite  aww_fp32.tflite  aww_int8.tflite
Benchmarks/models/toycar/: create_flatbuffers.py
Benchmarks/models/toycar/models/: toycar_fp16.tflite
CMake/: GCC_toolchain.cmake  README.md  add_Vicuna_test.cmake  add_test.cmake  llvm_17_toolchain.cmake  llvm_18_toolchain.cmake  run_spike_comparison.cmake  run_test.cmake
CV32E40X/: README.md
SW/: README.md
Scripts/: README.md  build_gcc.sh  build_llvm.sh  build_spike.sh  build_verilator.sh  data_conv.py  download_helper.sh  download_tflm.sh  half_float_conv.py  instruction_analysis.py  setup_toolchain.sh
Spike/: README.md
Spike/sw/: link.ld
Spike/sw/baremetal/: crt0.S  spike_cycle_out.S  terminate_benchmark.c  terminate_benchmark.h  uart.c  uart.h
Spike/sw/pk/: terminate_benchmark.c  terminate_benchmark.h  uart.h
Tests/: CMakeLists.txt
Tests/FPU/: fadd_s.S  fmadd_s.S  fmul_s.S
Tests/FPU+VEC/: fadd_s_vaadd_8.S  fmadd_s_vslide1down.S  fmul_s_vsoxei16.S
Tests/MISC/: cache_vector_len.S  load_latency_aligned.S  load_latency_misaligned.S
Tests/RISCV_TESTS_F/: fadd.S  fclass.S  fcmp.S  fcvt.S  fcvt_w.S  fdiv.S  fmadd.S  fmin.S  ldst.S  move.S  recoding.S
Tests/RISCV_TESTS_ZFH/: fadd.S  fclass.S  fcmp.S  fcvt.S  fcvt_w.S  fdiv.S  fmadd.S  fmin.S  ldst.S  move.S  recoding.S
Tests/Scalar/: add.S
Tests/ZVE32F/: vfadd_vf_32.S  vfadd_vv_32.S  vfclass_v_32.S  vfcvt_f_x_32.S  vfcvt_f_xu_32.S  vfcvt_rtz_x_f_32.S  vfcvt_rtz_xu_f_32.S  vfcvt_x_f_32.S  vfcvt_xu_f_32.S  vfdiv_vf_32.S  vfdiv_vv_32.S  vfmacc_vf_32.S  vfmacc_vv_32.S  vfmadd_vf_32.S  vfmadd_vv_32.S  vfmax_vf_32.S  vfmax_vv_32.S  vfmerge_vf_32.S  vfmin_vf_32.S  vfmin_vv_32.S  vfmsac_vf_32.S  vfmsac_vv_32.S  vfmsub_vf_32.S  vfmsub_vv_32.S  vfmul_vf_32.S  vfmul_vv_32.S  vfmv_f_s.S  vfnmacc_vf_32.S  vfnmacc_vv_32.S  vfnmadd_vf_32.S  vfnmadd_vv_32.S  vfnmsac_vf_32.S  vfnmsac_vv_32.S  vfnmsub_vf_32.S  vfnmsub_vv_32.S  vfrdiv_vf_32.S  vfredmax_32.S  vfredmin_32.S  vfredosum_32.S  vfredusum_32.S  (+11 more)
Tests/ZVFH/: vfadd_vf_16.S  vfadd_vv_16.S  vfwadd_vv_16.S
Toolchain/: README.md
Toolchain/Install/: README.md
Vicuna/: CMakeLists.txt  README.md
build_programs/: CMakeLists.txt  README.md
build_verilated/: CMakeLists.txt  README.md
